--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <canvas class="d-none" id="bg"></canvas>
+    <canvas id="bg"></canvas>
 
     <script type="module" src="/main.js"></script>
   </body>
